Configure SITE_URL for alvis.blog and add env example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
       args:
         # Variables de build (necesarias para Next.js)
-        - SITE_URL=${SITE_URL:-http://localhost:3000}
+        - SITE_URL=${SITE_URL:-https://alvis.blog}
         - NEXT_PUBLIC_GISCUS_REPO=${NEXT_PUBLIC_GISCUS_REPO:-}
         - NEXT_PUBLIC_GISCUS_REPO_ID=${NEXT_PUBLIC_GISCUS_REPO_ID:-}
         - NEXT_PUBLIC_GISCUS_CATEGORY_ID=${NEXT_PUBLIC_GISCUS_CATEGORY_ID:-}
@@ -14,7 +14,7 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - SITE_URL=${SITE_URL:-http://localhost:3000}
+      - SITE_URL=${SITE_URL:-https://alvis.blog}
       # Newsletter API (runtime - elige uno)
       - BUTTONDOWN_API_KEY=${BUTTONDOWN_API_KEY:-}
       - RESEND_API_KEY=${RESEND_API_KEY:-}
